src/objects/Baggage_Claim__c.object
<CustomObject>
    <fields>
        <fullName>Airline_Country__c</fullName>
        <formula>Airline_receiving__r.IATA_ISO_Country__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Airline Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Airline_Issuing_Id__c</fullName>
        <formula>Parent_PIR_Form__r.Airline_issuing__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Airline Issuing Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Airline_Receiving_Country_Id__c</fullName>
        <formula>Airline_receiving__r.IATA_ISO_Country__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Airline Receiving Country Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Airline_issuing__c</fullName>
        <formula>Parent_PIR_Form__r.Airline_issuing__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Airline issuing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Airline_receiving__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>this is help text</inlineHelpText>
        <label>Airline receiving</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>An Airline Headquarter Account should be selected.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Airline Headquarters</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Prorate Requests</relationshipLabel>
        <relationshipName>Baggage_Claims1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Airline_receiving_formula__c</fullName>
        <formula>Airline_receiving__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Airline receiving</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Airline_receiving_name__c</fullName>
        <label>Airline receiving</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Airport_Arrival__c</fullName>
        <formula>Parent_PIR_Form__r.Airport_Arrival__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Airport (Arrival)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arrival_Services__c</fullName>
        <formula>Parent_PIR_Form__r.Arrival_Services__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Arrival Services</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculation_details__c</fullName>
        <label>Calculation details</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Closing_Hour__c</fullName>
        <formula>TEXT( Parent_PIR_Form__r.Closing_Hour__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closing Hour</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Colour__c</fullName>
        <formula>TEXT(Parent_PIR_Form__r.Colour__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Colour</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Time_Proceed_to_payment__c</fullName>
        <label>Date/Time Proceed to payment</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_Baggage_Claim_duration__c</fullName>
        <formula>IF(

  ISPICKVAL(Status__c , &quot;Proceed to payment&quot;),
  Date_Time_Proceed_to_payment__c - CreatedDate,
  Now() -  CreatedDate

   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Prorate Request duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Go_vs_60_Day_Limit__c</fullName>
        <formula>IF( 
   ISPICKVAL(Status__c, &quot;Proceed to payment&quot;), 
   0, 

IF (
	AND(
	    NOT(ISBLANK(Tech_Last_Comment_Issuing_Date_Time__c)),
	    ISBLANK(Tech_Last_Comment_Receiving_Date_Time__c)
            ),
	60-(NOW()-Tech_Last_Comment_Issuing_Date_Time__c),

	IF (
	    AND(
		NOT(ISBLANK(Tech_Last_Comment_Issuing_Date_Time__c)),
		NOT(ISBLANK(Tech_Last_Comment_Receiving_Date_Time__c))
		),
	     60-(NOW()-Tech_Last_Comment_Receiving_Date_Time__c),
	     60
	     )
    )
	
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Go vs 60-Day-Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Destination__c</fullName>
        <formula>Parent_PIR_Form__r.Destination__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Destination</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination_prorated__c</fullName>
        <label>Destination</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Prorate_Dept_Airline_issuing__c</fullName>
        <label>Email (Prorate Dept.) Airline issuing</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Prorate_Dept_Airline_receiving__c</fullName>
        <label>Email (Prorate Dept.) Airline receiving</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <formula>Parent_PIR_Form__r.Fax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flight_Date_Formated__c</fullName>
        <label>Flight Date</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flight_Date__c</fullName>
        <formula>text(Parent_PIR_Form__r.Flight_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flight Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flight_Date_prorated__c</fullName>
        <label>Flight Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flight_Number__c</fullName>
        <formula>Parent_PIR_Form__r.Flight_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flight Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flight_Number_prorated__c</fullName>
        <label>Flight Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Bag_10_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Bag 10 Selected ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Bag_1_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Bag 1 Selected ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Bag_2_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Bag 2 Selected ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Segment_1_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Segment 1 Selected ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Segment_2_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Segment 2 Selected ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Segment_3_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Segment 3 Selected ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Bags__c</fullName>
        <formula>Parent_PIR_Form__r.Number_of_Bags__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Bags</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opening_Hour__c</fullName>
        <formula>TEXT(Parent_PIR_Form__r.Opening_Hour__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opening Hour</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <formula>Parent_PIR_Form__r.Origin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Origin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin_prorated__c</fullName>
        <label>Origin</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIR_Currency__c</fullName>
        <description>Currency of the Parent PIR Form (PIR_Currency_of_conversion__c)</description>
        <formula>TEXT(Parent_PIR_Form__r.PIR_Currency_of_conversion__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIR_File_Ref__c</fullName>
        <formula>Parent_PIR_Form__r.PIR_File_Ref__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PIR File Ref.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIR_Request_Sent_Date__c</fullName>
        <description>Baggage Proration
The date at which the request was sent to the Airline Receiving. This date is fed by trigger when the Airline Issuing creates its first &apos;Prorate Request Comment&apos;</description>
        <label>Request Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PIR_Total_Prorated_Amount_Due__c</fullName>
        <label>Total Prorated Amount Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_PIR_Form__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Parent PIR Form</label>
        <referenceTo>PIR_Form__c</referenceTo>
        <relationshipName>Baggage_Claims</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Passenger_s_First_Name__c</fullName>
        <formula>Parent_PIR_Form__r.Passenger_s_First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Passenger&apos;s First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passenger_s_Last_Name__c</fullName>
        <formula>Parent_PIR_Form__r.Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Passenger&apos;s Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passenger_s_initials__c</fullName>
        <formula>Parent_PIR_Form__r.Passenger_s_initials__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Passenger&apos;s initials</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Parent_PIR_Form__r.Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proration_Amount_Due__c</fullName>
        <formula>Total_PIR_Amount__c  *  Proration_percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Amount Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proration_percentage__c</fullName>
        <label>%Proration</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Request_Sent_Date_Formated__c</fullName>
        <label>Request Sent Date</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>Open</fullName>
                <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                <fullName>Proceed to payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tag_Number__c</fullName>
        <formula>Parent_PIR_Form__r.Tag_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tag Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Last_Comment_Issuing_Date_Time__c</fullName>
        <label>Tech_Last Comment Issuing Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tech_Last_Comment_Receiving_Date_Time__c</fullName>
        <label>Tech_Last Comment Receiving Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Ticket_Number__c</fullName>
        <formula>Parent_PIR_Form__r.Ticket_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ticket Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_Number_prorated__c</fullName>
        <label>Ticket Number (p)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>TEXT(  Parent_PIR_Form__r.Title__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_PIR_Amount__c</fullName>
        <formula>Parent_PIR_Form__r.Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total PIR Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>TEXT( Parent_PIR_Form__r.Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_is_Receiver__c</fullName>
        <description>Technical field. Used in Baggage Proration / Prorate Request Object. Community Reporting purpose.
True if Community User&apos;s Account ID = Airline Receiving&apos;s Account ID. 
Meaning the Community User is consulting a Prorate Request addressed to him (where he is Airline Receiving).</description>
        <formula>IF(Airline_receiving__r.Id =  $User.Account_ID__c , True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User is Receiver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2_letter_Airline_Code__c</fullName>
        <label>Airline Receiving 2-letter Designator</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <label>Prorate Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PIR_File_Ref__c</columns>
        <columns>Airline_issuing__c</columns>
        <columns>Airline_receiving__c</columns>
        <columns>Passenger_s_First_Name__c</columns>
        <columns>Passenger_s_Last_Name__c</columns>
        <columns>Days_to_Go_vs_60_Day_Limit__c</columns>
        <columns>PIR_Request_Sent_Date__c</columns>
        <columns>Request_Sent_Date_Formated__c</columns>
        <columns>PIR_Total_Prorated_Amount_Due__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>B-{000000}</displayFormat>
        <label>Request N°</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prorate Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>PIR_Airline_Receiving_NOT_blank</fullName>
        <active>true</active>
        <description>Airline receiving 2-letter Designator Code and/or Airline receiving must be populated</description>
        <errorConditionFormula>AND(
    ISBLANK(X2_letter_Airline_Code__c),
    ISBLANK(Airline_receiving_formula__c)
    )</errorConditionFormula>
        <errorDisplayField>X2_letter_Airline_Code__c</errorDisplayField>
        <errorMessage>Airline receiving 2-letter Designator Code and/or Airline receiving must be populated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PIR_Issuing_NOTequal_Receiving</fullName>
        <active>true</active>
        <description>An Airline Issuing should NOT be able to issue a Prorate Request to itself</description>
        <errorConditionFormula>Airline_issuing__c =   Airline_receiving_name__c</errorConditionFormula>
        <errorDisplayField>Airline_receiving_name__c</errorDisplayField>
        <errorMessage>Airline Issuing and Receiving are the same. You cannot issue a Prorate Request to your Airline. Please modify the Airline receiving 2-letter Designator Code.</errorMessage>
    </validationRules>
</CustomObject>